--- a/settings.gradle
+++ b/settings.gradle
@@ -17,4 +17,5 @@ rootProject.name = 'operation'
 include 'test-tool'
 include 'algorithm-platform'
 include 'process-tool'
+include 'operation-tool'
 
