--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+buildscript{
+}
 plugins {
 	id 'org.springframework.boot' version '2.1.13.BUILD-SNAPSHOT' apply false
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE' apply false
@@ -7,7 +9,6 @@ plugins {
 group = 'com.damonhang'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
-
 
 allprojects {
 	apply plugin: 'java'
@@ -26,6 +27,10 @@ allprojects {
 	}
 	dependencies {
 		implementation('org.springframework.boot:spring-boot-starter-web')
+		compileOnly('org.projectlombok:lombok:1.18.2')
+		annotationProcessor 'org.projectlombok:lombok:1.18.12'
+		
+		testCompile group: 'junit', name: 'junit', version: '4.12'
 	}
 }
 
