--- a/process-tool/build.gradle
+++ b/process-tool/build.gradle
@@ -12,8 +12,9 @@ version '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
 dependencies {
-    implementation "org.activiti:activiti-spring-boot-starter-basic:$activitiVersion"
     implementation 'mysql:mysql-connector-java'
+    compile 'org.ansj:ansj_seg:5.1.1'
+    compile 'com.github.rholder:guava-retrying:2.0.0'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
