--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ allprojects {
 		maven { url 'https://repo.spring.io/snapshot' }
 	}
 	dependencies {
-		implementation('org.springframework.boot:spring-boot-starter-web')
+//		implementation('org.springframework.boot:spring-boot-starter-web')
 		compileOnly('org.projectlombok:lombok:1.18.2')
 		annotationProcessor 'org.projectlombok:lombok:1.18.12'
 		
