--- a/cloud/build.gradle
+++ b/cloud/build.gradle
@@ -10,9 +10,18 @@ repositories {
 }
 
 dependencies {
-    compile 'org.springframework.cloud:spring-cloud-starter-openfeign:2.0.0.RELEASE'
-    compile 'org.apache.httpcomponents:httpclient'
-    compile 'io.github.openfeign:feign-httpclient:10.1.0'
+    implementation 'io.github.openfeign:feign-hystrix:10.12'
+    compile 'org.apache.httpcomponents:httpclient:4.5.13'
+    implementation 'io.github.openfeign:feign-httpclient:10.12'
+    implementation 'com.netflix.hystrix:hystrix-javanica:1.5.18'
+
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile 'com.squareup.okhttp3:mockwebserver:4.10.0-RC1'
+    testCompile 'io.github.openfeign:feign-java11:10.12'
+    testCompile 'io.github.openfeign:feign-gson:10.12'
+    testCompile 'org.jetbrains.kotlin:kotlin-stdlib:1.3.70'
+    testCompile 'com.alibaba:fastjson:1.2.75'
+    implementation 'com.alibaba:fastjson:1.2.75'
+
 }
